--- a/template/register/login.html
+++ b/template/register/login.html
@@ -1,33 +1,24 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+<!DOCTYPE html><html lang="en">
+<head>    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Вход</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">    <style>
+        body {            display: flex;
+            align-items: center;            justify-content: center;
+            height: 100vh;            margin: 0;
+        }        .form-container {
+            width: 400px;        }
+    </style></head>
 <body>
-<header>
-    <!-- header !-->
-</header>
- <div class="form-container">
-    <h2 class="text-center mb-4">Вход</h2>
-     <form method="post">
-        {% csrf_token %}
-         <div class="form-group">
-            <label for="username">Имя пользователя:</label>
-             <input type="text" name="username" class="form-control">
-        </div>
-         <div class="form-group">
-            <label for="password">Пароль:</label>
-             <input type="password" name="password" class="form-control">
+<div class="form-container">
+    <h2 class="text-center mb-4">Вход</h2>    <form method="post">
+        {% csrf_token %}        <div class="form-group">
+            <label for="username">Имя пользователя:</label>            <input type="text" name="username" class="form-control">
+        </div>        <div class="form-group">
+            <label for="password">Пароль:</label>            <input type="password" name="password" class="form-control">
         </div>        <button type="submit" class="btn btn-primary btn-block">Войти</button>
         <p>Если аккуанта нет, то жмите</p>        <a href="{% url 'register' %}" class="btn btn-primary btn-block">Зарегистрироваться</a>
     </form>
 </div>
-<footer>
-    <!-- footer !-->
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body></html>
