--- a/template/restaurant/main.html
+++ b/template/restaurant/main.html
@@ -5,21 +5,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="{% static 'css/main.css' %}" rel="stylesheet">
-    <script>
-             const syncPointer = ({ x: pointerX, y: pointerY }) => {
-  const x = pointerX.toFixed(2)
-  const y = pointerY.toFixed(2)
-  const xp = (pointerX / window.innerWidth).toFixed(2)
-  const yp = (pointerY / window.innerHeight).toFixed(2)
-  document.documentElement.style.setProperty('--x', x)
-  document.documentElement.style.setProperty('--xp', xp)
-  document.documentElement.style.setProperty('--y', y)
-  document.documentElement.style.setProperty('--yp', yp)
-}
-document.body.addEventListener('pointermove', syncPointer)
-
-         </script>
 </head>
 <body>
 <header>
@@ -35,18 +20,15 @@ document.body.addEventListener('pointermove', syncPointer)
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Дом</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Ещё
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="{% url 'register' %}">Регистрация</a></li>
+            <li><a class="dropdown-item" href="{% url 'login' %}">Вход</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">О нас</a></li>
           </ul>
         </li>
       </ul>
@@ -70,17 +52,16 @@ document.body.addEventListener('pointermove', syncPointer)
     </div>
 {% endfor %}
 </div>
-           <button>
+           <button class="fools">
     <span> < </span>
   </button>
-  <button>
+  <button class="fools">
     <span> > </span>
   </button>
 <footer>
 
 
 </footer>
-d
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
